--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WNC4EC1LNP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-WNC4EC1LNP');
+</script>
+
 <meta charset="UTF-8">
 <title>Ultimate 3D Particle System - 20 Gestures</title>
 <style>
@@ -197,3 +205,4 @@ window.addEventListener('resize', () => {
 </script>
 </body>
 </html>
+
